<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_left_turn"
        android:icon="@drawable/left_on"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/left_light"/>
    <item
        android:id="@+id/menu_right_turn"
        android:icon="@drawable/right_on"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/right_light"/>
    <item
        android:id="@+id/menu_lights"
        android:icon="@drawable/lights_on"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/main_light"/>
    <item
        android:id="@+id/menu_emergency"
        android:icon="@drawable/emergency_on"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/emergency_light"/>
    <item
        android:id="@+id/menu_bt_ok"
        android:icon="@drawable/ic_action_bt_ok"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/connection_status"/>
    <item
        android:id="@+id/menu_battery_100"
        android:icon="@drawable/ic_action_battery100"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/battery_status"/>
    <item
        android:id="@+id/menu_disconnect"
        android:icon="@drawable/ic_action_disconnect"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_disconnect"/>
    <item
        android:id="@+id/menu_connect"
        android:icon="@drawable/ic_action_connect"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/menu_connect"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_device_info"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_hardware"/>

</menu>