<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/textViewSteeringCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steering_center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarSteeringCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewSteeringMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steering_left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarSteeringMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewSteeringMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steering_right"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarSteeringMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkBoxSymmetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steering_symetric" />

    <TextView
        android:id="@+id/textViewSterringDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steering_hint" />

</LinearLayout>
