<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewThrottleCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throttle_idle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarThrottleCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewThrottleMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throttle_reverse"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarThrottleMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewThrottleMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throttle_forward"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarThrottleMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewThrottleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throttle_hint" />

</LinearLayout>
