<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/hardware_version" />

        <TextView
            android:id="@+id/hardware_info"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/firmware_version" />

        <TextView
            android:id="@+id/firmware_info"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:gravity="left"
            android:text=""
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/new_firmware_version" />

        <TextView
            android:id="@+id/new_firmware_info"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:gravity="left"
            android:text=""
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >
    </LinearLayout>

    <TextView
        style="@style/logStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#00000000"
        android:lines="10"
        android:padding="5dp" />

    <ProgressBar
        android:id="@+id/update_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:indeterminate="false"
        android:max="100"
        android:maxHeight="15dip"
        android:minHeight="15dip"
        android:progress="0"
        android:progressDrawable="@drawable/progress_horizontal_ble_zee" />

    <TextView
        android:id="@+id/update_info_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/select_firmware_button"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="selectFirmware"
            android:text="@string/select_firmware" />

        <Button
            android:id="@+id/start_update_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0"
            android:onClick="startUpdate"
            android:text="@string/update" />
    </LinearLayout>

</LinearLayout>